2016-06-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update tests to test new APIs.

	* tests/test_thbrk.c (main), tests/test_thwbk.c (main):
	  - Create, use, and free ThBrk instance with the new APIs
	    instead of the deprecated ones.

2016-06-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update documentation for API deprecation.

	* src/thbrk/thbrk.c, src/thwbrk/thwbrk.c:
	  - Add info for deprecated functions.
	  - Add availability info for new functions.

	* src/thinp/thinp.c:
	  - Add availability info for th_validate_leveled().

	* src/libthai.c:
	  - Add missing link to th_validate_leveled().

2016-06-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update library versioning.

	* configure.ac:
	  - Bump library versions to reflect the added API.

2016-06-22  Mark Brown  <mark@mercurylang.org>

	Implement a new thread-safe interface for word break.

	To achieve more thread-safety without depending on mutex mechanisms,
	a new set of APIs is added so that the client can create
	a shared instance of word break engine by him/herself
	under appropriate mutex. Then, the word break functions
	can be safely called in parallel using the shared engine.


	* include/thai/thbrk.h:
	* include/thai/thwbrk.h:
	* src/libthai.c:
	* src/libthai.def:
	* src/libthai.map:
	  - Add new exported APIs:
	    th_brk_new(), th_brk_delete(),
	    th_brk_brk(), th_brk_brk_line(),
	    th_brk_wbrk(), th_brk_wbrk_line().

	* src/thbrk/brk-common.h, src/thbrk/brk-common.c
	  (-brk_on_unload, -brk_get_dict, +brk_load_default_dict):
	  - Remove old shared dict management. It's to be as part of
	    ThBrk implementation in ThBrk layer instead.
	  - The logic for finding and loading dictionary at
	    default paths is still retained here.

	* src/thbrk/thbrk.c (th_brk_new, th_brk_delete):
	  - Implement ThBrk (de)allocation, with dictionary loading
	    at specified path or at default paths if not specified.

	* src/thbrk/brk-maximal.h, src/thbrk/brk-maximal.c